# musicando

./: .gitignore  .pylintrc  README.md  ants.py  aqua.py  devoltapracasa.py  pyproject.toml
compositions/: nossabova.py  snicker.py  tempos.py
experiments/: drums.py
loops/: ants.py  aqua.py  devoltapracasa.py  song0.py
src/musicando/compositions/: nossabova.py  snicker.py  tempos.py
src/musicando/loops/: ants.py  aqua.py
