[tool.poetry]
name = "musicando"
version = "0.1.0"
description = "Aprendendo e brincando com FoxDot"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
FoxDot = "^0.8.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
