[tool.poetry]
name = "musicando"
version = "0.1.0"
description = "Aprendendo e brincando com FoxDot"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "musicando", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
FoxDot = "^0.8.12"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"